infrastructure/base/cilium-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: gateway-system
spec:
  gatewayClassName: cilium

  infrastructure:
    labels:
      bgp-advertise: "true"

  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.tmatthews.casa"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tmatthews-casa-tls
            kind: Secret
            namespace: traefik
      allowedRoutes:
        namespaces:
          from: All
